--- a/src/scss/counter.scss
+++ b/src/scss/counter.scss
@@ -2,7 +2,7 @@ $digitHeight: 32px;
 $speed: .1s;
 
 .counter {
-  box-sizing: content-box!important;
+  box-sizing: content-box !important;
   display: inline-block;
   height: $digitHeight;
   line-height: $digitHeight;
@@ -41,7 +41,6 @@ $speed: .1s;
 
 .numCounter {
   overflow: hidden;
-  position: absolute;
   width: auto;
   height: $digitHeight;
   margin: auto;
@@ -58,7 +57,7 @@ $speed: .1s;
   // &:after{ content:''; position:absolute; left:0; right:0; height:100%; bottom:-45%; background:#151515; border-radius:20px; box-shadow:0 0 60px #111; z-index:-1; transform:rotatex(80deg); }
   &:before {
     content: '';
-    position: absolute;
+    //position: absolute;
     left: -10%;
     right: -10%;
     top: -50%;
@@ -70,3 +69,13 @@ $speed: .1s;
   }
 }
 
+.testtt {
+  width: 100%;
+  height: 3000px;
+  background: #d2d;
+}
+
+.count-section {
+  display: flex;
+  height: 500px;
+}
